--- a/Gutnberg/Gutenberg.csproj
+++ b/Gutnberg/Gutenberg.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageProjectUrl>https://github.com/DevRichard81</PackageProjectUrl>
+    <Copyright>https://github.com/DevRichard81</Copyright>
+    <RepositoryUrl>https://github.com/DevRichard81</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Authors>Richard Hauser</Authors>
   </PropertyGroup>
 
 </Project>
