feature(CSharpMagic): first try of working with reflection, try a simple dump of a class

--- a/LearnByDoingCli/LearnByDoingCli.csproj
+++ b/LearnByDoingCli/LearnByDoingCli.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Alexander\Alexander.csproj" />
+    <ProjectReference Include="..\CSharpMagic\CSharpMagic.csproj" />
     <ProjectReference Include="..\Gutnberg\Gutenberg.csproj" />
     <ProjectReference Include="..\Mendel\Mendel.csproj" />
   </ItemGroup>
